<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="move_right">Move Rigth</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="move_right2">Move right</string>
    <string name="move_left">Move left</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="stop">stop</string>
    <string name="continue_game">continue game</string>
    <string name="stop_game">Stop game</string>
    <string name="time_left">Time left:</string>
    <string name="level">Level:</string>
</resources>
